--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/react-cookies": "^0.1.0",
+    "@types/react-fontawesome": "^1.6.5",
     "firebase": "^9.14.0",
+    "fortawesome": "^0.0.1-security",
     "react": "^18.2.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
