--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.2.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "@types/react-animations": "^1.0.0",
         "@types/react-cookies": "^0.1.0",
         "@types/react-fontawesome": "^1.6.5",
+        "@types/styled-components": "^5.1.26",
         "firebase": "^9.14.0",
         "fortawesome": "^0.0.1-security",
         "react": "^18.2.0",
+        "react-animations": "^1.0.0",
         "react-cookies": "^0.1.1",
         "react-dom": "^18.2.0",
+        "react-spring": "^9.5.5",
+        "styled-components": "^5.3.6",
         "usetube": "^2.2.2",
         "yt-channel-info": "^3.2.1"
     },
